# stockflow

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose-example.yml  main.py  pyproject.toml  render.yaml
alembic/: env.py
alembic/versions/: b6d7af60c37f_auto_migration.py
core/: config.py  lifespan.py  middleware.py
db/: session.py
db/models/: __init__.py  models.py  schemas.py
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  api.js  index.css
frontend/src/pages/: Customers.jsx  Dashboard.jsx  Orders.jsx  Products.jsx
frontend/src/utils/: alert.js
routers/: customers.py  dashboard.py  orders.py  products.py
scripts/: init_db.sh
services/: customer_service.py  dashboard_service.py  order_service.py  product_service.py
